--- a/_toc.yml
+++ b/_toc.yml
@@ -4,6 +4,7 @@ parts:
   - caption: 備忘録
     chapters:
     - file: how_to_update_jb
+    - file: create_venv
   - caption: 雑記
     chapters:
     - file: movies_watched
