--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,9 @@ author: "柴田 侃汰 SHIBATA Kanta"
 
 execute:
   execute_notebooks: off
+
+parse:
+  myst_enable_extensions:
+    # don't forget to list any other extensions you want enabled,
+    # including those that are enabled by default!
+    - amsmath
