--- a/_toc.yml
+++ b/_toc.yml
@@ -8,9 +8,7 @@ parts:
     - file: 備忘録/Book_Introducing_Python/Book_Introducing_Python
       sections:
       - file: 備忘録/Book_Introducing_Python/9章　関数/p181
-#    - file: 備忘録/書籍_Pythonによる機械学習入門/book_Python_ml_Ohmsha
-#      sections:
-#      - file: 備忘録/書籍_Pythonによる機械学習入門/chapter3
+      - file: 備忘録/Book_Introducing_Python/9章　関数/p183-187
   - caption: 雑記
     chapters:
     - file: 雑記/movies_watched
