--- a/_toc.yml
+++ b/_toc.yml
@@ -8,9 +8,9 @@ parts:
     - file: bibouroku/Matplotlib/Matplotlib-intro
       sections:
       - file: bibouroku/Matplotlib/two-ways-to-graph
-    - file: bibouroku/Imbalanced-learn/Imbalanced-learn-intro
-      sections:
-      - file: bibouroku/Imbalanced-learn/imbalanced_datasets_baseline
+#    - file: bibouroku/Imbalanced-learn/Imbalanced-learn-intro
+#      sections:
+#      - file: bibouroku/Imbalanced-learn/imbalanced_datasets_baseline
     - file: bibouroku/Book_Introducing_Python/Book_Introducing_Python
       sections:
       - file: bibouroku/Book_Introducing_Python/9章　関数/p181
