--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Book settings
-title                       : "備忘録 雑記"
+title                       : "雑記 備忘録"
 author                      : "柴田 侃汰 (Twitter: @shibata12k)"
 copyright                   : "2021-2022"
 
