--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 title                       : "雑記 備忘録"
 author                      : "柴田 侃汰 (Twitter: @shibata12k)"
-copyright                   : "2021-2022"
+copyright                   : "2021-2023"
 
 # Execution settings
 execute:
@@ -11,6 +11,10 @@ execute:
 parse:
   myst_enable_extensions:
     - amsmath
+
+# Add a bibtex file so that we can create citations
+bibtex_bibfiles:
+  - references.bib
 
 # HTML-specific settings
 html:
