--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Book settings
 title                       : "雑記 備忘録"
-author                      : "柴田 侃汰 (Twitter: @shibata12k)"
+author                      : "柴田 侃汰 (Twitter(X): @shibata12k)"
 copyright                   : "2021-2023"
 
 # Execution settings
