--- a/_toc.yml
+++ b/_toc.yml
@@ -11,17 +11,17 @@ parts:
     chapters:
     - file: bibouroku/how_to_update_jb
     - file: bibouroku/create_venv
-    - file: bibouroku/Bayes-stat/Bayes-stat-intro
-      sections:
-      - file: bibouroku/Bayes-stat/history
-    - file: bibouroku/Matplotlib/Matplotlib-intro
-      sections:
-      - file: bibouroku/Matplotlib/two-ways-to-graph
+    # - file: bibouroku/Bayes-stat/Bayes-stat-intro
+    #   sections:
+    #   - file: bibouroku/Bayes-stat/history
+    # - file: bibouroku/Matplotlib/Matplotlib-intro
+    #   sections:
+    #   - file: bibouroku/Matplotlib/two-ways-to-graph
 #    - file: bibouroku/Imbalanced-learn/Imbalanced-learn-intro
 #      sections:
 #      - file: bibouroku/Imbalanced-learn/imbalanced_datasets_baseline
-    - file: bibouroku/Book_Introducing_Python/Book_Introducing_Python
-      sections:
-      - file: bibouroku/Book_Introducing_Python/9章　関数/p181
-      - file: bibouroku/Book_Introducing_Python/9章　関数/p183-187
-      - file: bibouroku/Book_Introducing_Python/9章　関数/p205
+    # - file: bibouroku/Book_Introducing_Python/Book_Introducing_Python
+    #   sections:
+    #   - file: bibouroku/Book_Introducing_Python/9章　関数/p181
+    #   - file: bibouroku/Book_Introducing_Python/9章　関数/p183-187
+    #   - file: bibouroku/Book_Introducing_Python/9章　関数/p205
