Update watched_movies.md and hide zakki.

--- a/_toc.yml
+++ b/_toc.yml
@@ -1,9 +1,9 @@
 format: jb-book
 root: home
 parts:
-  - caption: 雑記
-    chapters:
-    - file: zakki/movies_watched
+  #20240901 - caption: 雑記
+  #20240901   chapters:
+  #20240901   - file: zakki/movies_watched
 #    - file: zakki/year_review/intro
 #      sections:
 #      - file: zakki/year_review/report2021
