--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 title                       : "雑記 備忘録"
-author                      : "柴田 侃汰 (Twitter(X): @shibata12k)"
-copyright                   : "2021-2024"
+# author                      : ""
+copyright                   : "2021-2025"
 
 # Execution settings
 execute:
